[package]
name = "cb"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/nahco314/cb"

[dependencies]
arboard = "3.4.1"
atty = "0.2.14"
libc = "0.2.169"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
